--- a/Source/Utility/Utility.vcxproj
+++ b/Source/Utility/Utility.vcxproj
@@ -74,11 +74,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Drawable.h" />
+    <ClInclude Include="drawableManager.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="LoggerMessageEvent.h" />
     <ClInclude Include="Pool.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DrawableManager.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="LoggerMessageEvent.cpp" />
   </ItemGroup>
