edit Rocket class and minor fixes

--- a/Source/Utility/Utility.vcxproj
+++ b/Source/Utility/Utility.vcxproj
@@ -74,6 +74,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DrawableManager.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="LoggerMessageEvent.h" />
     <ClInclude Include="Pool.h" />
