Edit Physics and PhysicsTest: now physics supports any screen resolution, not just 1200x800 :)

--- a/Source/Physics/Physics.vcxproj.filters
+++ b/Source/Physics/Physics.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="Physics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WindowResolution.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Physics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WindowResolution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
