--- a/Source/AsteroidsLogicAndSpaceTest/AsteroidsLogicAndSpaceTest.vcxproj
+++ b/Source/AsteroidsLogicAndSpaceTest/AsteroidsLogicAndSpaceTest.vcxproj
@@ -62,7 +62,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Source\Events;$(SolutionDir)SFML\include;$(SolutionDir)Source\Physics;$(SolutionDir)Source\Resources;$(SolutionDir)Source\AsteroidsLogicAndSpace;$(SolutionDir)Source\AsteroidsLogicAndSpaceTest;$(SolutionDir)Source\Utility;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Source\Input;$(SolutionDir)Source\Spaceship;$(SolutionDir)Source\Animation;$(SolutionDir)Source\Events;$(SolutionDir)SFML\include;$(SolutionDir)Source\Physics;$(SolutionDir)Source\Resources;$(SolutionDir)Source\AsteroidsLogicAndSpace;$(SolutionDir)Source\AsteroidsLogicAndSpaceTest;$(SolutionDir)Source\Utility;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
