--- a/Source/Spaceship/Spaceship.vcxproj.filters
+++ b/Source/Spaceship/Spaceship.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="OrdinaryBullet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BulletManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BulletManagerEvents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Spaceship.cpp">
@@ -36,6 +42,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="OrdinaryBullet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BulletManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BulletManagerEvents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
