--- a/Source/Achievements/Achievements.vcxproj.filters
+++ b/Source/Achievements/Achievements.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Achievements.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EventForAchiev.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
