add Mathematics.h in Utility

--- a/Source/Utility/Utility.vcxproj.filters
+++ b/Source/Utility/Utility.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="DrawableManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Mathematics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Logger.cpp">
