--- a/Source/Utility/Utility.vcxproj
+++ b/Source/Utility/Utility.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="drawableManager.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="LoggerMessageEvent.h" />
+    <ClInclude Include="Mathematics.h" />
     <ClInclude Include="Pool.h" />
   </ItemGroup>
   <ItemGroup>
