fix asteroids in mainLoop

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -10,6 +10,7 @@ smallasteroid =  Resources\graphics\smallasteroid.png
 [TextureResource]
 bullet = Resources\graphics\bullet.png
 rocket = Resources\graphics\rocket.png
+asteroidTexture = Resources\graphics\asteroid.png
 
 [ImageSequenceResource]
 girl =  Resources\graphics\girl.png
