Finally added particles!

--- a/Source/ParticleSystem/Particle.vcxproj.filters
+++ b/Source/ParticleSystem/Particle.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Particles.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ParticleAssets.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Particles.cpp">
