--- a/Source/ParticleSystem/Particle.vcxproj
+++ b/Source/ParticleSystem/Particle.vcxproj
@@ -95,6 +95,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ParticleAssets.h" />
     <ClInclude Include="Particles.h" />
   </ItemGroup>
   <ItemGroup>
